objects/ASI_CRM_Times_of_Caps_with_Issues__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Times of Caps with Issues</relationshipLabel>
        <relationshipName>Times_of_Caps_with_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Times__c</fullName>
        <label>Times</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Times of Caps with Issue</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Times of Caps with Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times of Caps with Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>